# situation-awareness-software_ver1.1

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main_noext.cpp
docs/: architecture.md
include/: json_min.hpp  risk.hpp  sim_sensor.hpp  tracker.hpp  types.hpp  udp_pub.hpp
src/: main.cpp  risk.cpp  sim_sensor.cpp  tracker.cpp  udp_pub.cpp
